# atlas-lingua-demo

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  catalog.py  config.py  main.py  prompts.py
app/api/: __init__.py  deps.py  routes.py  ws.py
app/models/: __init__.py  api.py  domain.py
app/services/: __init__.py  audio_storage.py  conversation_orchestrator.py  session_store.py
app/services/providers/: __init__.py  base.py  deepgram.py  mock.py  openai_tutor.py
app/static/css/: styles.css
app/static/js/: app.js  audio-processor.js
app/templates/: index.html
atlas_lingua_demo.egg-info/: SOURCES.txt  requires.txt
tests/: test_api.py  test_ws.py
